--- a/yanzhi.plist
+++ b/yanzhi.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://raw.githubusercontent.com/reference/yanzhi/main/yanzhi.ipa?token=AAGJIZLXCET6HHJBBCDXEGC73VVTK</string>
+                    <string>https://raw.githubusercontent.com/reference/yanzhiipa/main/yanzhi.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
