--- a/yanzhi.plist
+++ b/yanzhi.plist
@@ -11,35 +11,31 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/reference/yanzhiipa/main/yanzhi.ip</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>needs-shine</key>
-					<false/>
-					<key>url</key>
-					<string>http://114.215.112.121:10081/one.png</string>
+					<string>https://raw.githubusercontent.com/reference/yanzhiipa/main/yanzhi.plist</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
-					<key>needs-shine</key>
-					<false/>
 					<key>url</key>
-					<string>http://114.215.112.121:10082/two.png</string>
+					<string>https://www.baidu.com/icon.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>https://www.baidu.com/icon2.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.madengdeng.PietureNews</string>
+				<string>test.hh.sss</string>
 				<key>bundle-version</key>
-				<string>1.0</string>
+				<string>1.0.0</string>
 				<key>kind</key>
 				<string>software</string>
-				<key>subtitle</key>
-				<string>欢迎使用此</string>
+				<key>platform-identifier</key>
+				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
 				<string>yanzhi</string>
 			</dict>
