--- a/yanzhi.plist
+++ b/yanzhi.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/reference/yanzhiipa/main/yanzhi.plist</string>
+					<string>https://raw.githubusercontent.com/reference/yanzhiipa/main/yanzhi.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
